--- a/Stats_Project.ipynb
+++ b/Stats_Project.ipynb
@@ -17,7 +17,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## ***The Three Datasets, and Reasons for Their Selection*** \n",
+        "## ***The Three Datasets*** \n",
         "\n",
         "I present below the three datasets I have chosen. My 'big' dataset is one which shows us the mileage, cylinders (in the engine), horsepower produced and weight (in lbs) of some popular American road cars. My second dataset is one which shows us the waiting time, and spout duration of some geysers around the world, and this is the dataset we intend to use to study dichotomous data. Our last ('small') dataset is the first of the four famous datatsets described by F.J. Anscombe in his work *Graphs in Statistical Analysis* (1973). \n",
         "\n"
